--- a/compartments/layouts/application.html
+++ b/compartments/layouts/application.html
@@ -1,28 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Duc's Bistro | Traditional Vietnamese and Classic French Cuisine Serving Chinatown Since 1992</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Lato" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/styles/styles.css">
-  </head>
-  <body>
-    <header class="main-header contain section">
-      <h1 class="main-header__text">Duc’s Bistro</h1>
-      <p class="main-header__information section"><span>Traditional Vietnamese and Classic French Cuisine</span><span class="hidden--phone hidden--tablet">&nbsp;•&nbsp;</span><span>Serving Chinatown Since 1992</span></p>
-      <address class="main-header__address">Located at 1188 Maunakea Street Honolulu, Hawaii 96817</address>
-      <p class="main-header__phone">For Reservations call us<span>(808) 531-6325</span></p>
-      <p class="main-header__phone"><a href="/contact">click here to make your reservation online</a></p>
-    </header>
-    <nav class="section">
-      <ul class="navigation">
-        <li class="navigation__item"><a href="/">Home</a></li>
-        <li class="navigation__item"><a href="/#hours">Hours</a></li>
-        <li class="navigation__item"><a href="/menu/view/main-menu">Menu</a></li>
-        <li class="navigation__item"><a href="/wine-lists/view/wine">Wine List</a></li>
-        <li class="navigation__item"><a href="/contact">Reservations</a></li>
-      </ul>
-    </nav>{{{ template }}}
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><title>Duc's Bistro | Traditional Vietnamese and Classic French Cuisine Serving Chinatown Since 1992</title><meta name="viewport" content="width=device-width, initial-scale=1.0"><link href="https://fonts.googleapis.com/css?family=Crimson+Text|Lato" rel="stylesheet"><link rel="stylesheet" href="/assets/styles/styles.css"></head><body><header class="main-header contain section"><h1 class="main-header__text">Duc’s Bistro</h1><p class="main-header__information section"><span>Traditional Vietnamese and Classic French Cuisine</span><span class="hidden--phone hidden--tablet">•</span><span>Serving Chinatown Since 1992</span></p><address class="main-header__address">1188 Maunakea Street Honolulu, Hawaii 96817</address><p class="main-header__phone"><span>For reservations please call</span><span>(808) 531-6325</span></p></header><nav class="section"><ul class="navigation"><li class="navigation__item"><a href="/">Home</a></li><li class="navigation__item"><a href="/#hours">Hours</a></li><li class="navigation__item"><a href="/menu/view/main-menu">Menu</a></li><li class="navigation__item"><a href="/wine-lists/view/wine">Wine List</a></li></ul></nav>{{{ template }}}</body></html>
