--- a/compartments/templates/menu/show.html
+++ b/compartments/templates/menu/show.html
@@ -1,323 +1,1 @@
-<!--
-<div class="menu section contain contain__section" id="menu">
-  <h2 class="menu__title">{{fields.type}}</h2>
-  <article class="menu__course section">
-    <header class="menu__title section">
-      <h3>Appetizers</h3>
-      <p>Served Family Style</p>
-    </header>
-    <ul class="menu__course__list section">{{#each related_items.appetizers}}
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">{{fields.name}}</h4>
-        <p class="menu__course__item__desc">{{fields.description}} • {{fields.cost}}</p>
-        <p class="menu__course__item__price"></p>
-      </li>{{/each}}
-    </ul>
-  </article>
-  <article class="menu__course section">
-    <header class="menu__title section">
-      <h3>Soup and Salad</h3>
-    </header>
-    <ul class="menu__course__list section">{{#each related_items.soup_and_salad}}
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">{{fields.name}}</h4>
-        <p class="menu__course__item__desc">{{fields.description}} • {{fields.cost}}</p>
-        <p class="menu__course__item__price"></p>
-      </li>{{/each}}
-    </ul>
-  </article>
-  <article class="menu__course section">
-    <header class="menu__title section">
-      <h3>Vegetables</h3>
-      <p>Served Family Style</p>
-    </header>
-    <ul class="menu__course__list section">{{#each related_items.vegetables}}
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">{{fields.name}}</h4>
-        <p class="menu__course__item__desc">{{fields.description}} • {{fields.cost}}</p>
-        <p class="menu__course__item__price"></p>
-      </li>{{/each}}
-    </ul>
-  </article>
-  <article class="menu__course section">
-    <header class="menu__title section">
-      <h3>Seafood</h3>
-      <p>Served Family Style</p>
-    </header>
-    <ul class="menu__course__list section">{{#each related_items.seafood}}
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">{{fields.name}}</h4>
-        <p class="menu__course__item__desc">{{fields.description}} • {{fields.cost}}</p>
-        <p class="menu__course__item__price"></p>
-      </li>{{/each}}
-    </ul>
-  </article>
-  <article class="menu__course section">
-    <header class="menu__title section">
-      <h3>Poultry</h3>
-      <p>Served Family Style</p>
-    </header>
-    <ul class="menu__course__list section">{{#each related_items.poultry}}
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">{{fields.name}}</h4>
-        <p class="menu__course__item__desc">{{fields.description}} • {{fields.cost}}</p>
-        <p class="menu__course__item__price"></p>
-      </li>{{/each}}
-    </ul>
-  </article>
-  <article class="menu__course section">
-    <header class="menu__title section">
-      <h3>Meat</h3>
-      <p>Served Family Style</p>
-    </header>
-    <ul class="menu__course__list section">{{#each related_items.meat}}
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">{{fields.name}}</h4>
-        <p class="menu__course__item__desc">{{fields.description}} • {{fields.cost}}</p>
-        <p class="menu__course__item__price"></p>
-      </li>{{/each}}
-    </ul>
-  </article>
-  <article class="menu__course section">
-    <header class="menu__title section">
-      <h3>Starches</h3>
-    </header>
-    <ul class="menu__course__list section">{{#each related_items.starches}}
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">{{fields.name}}</h4>
-        <p class="menu__course__item__desc">{{fields.description}} • {{fields.cost}}</p>
-        <p class="menu__course__item__price"></p>
-      </li>{{/each}}
-    </ul>
-  </article>
-</div> -->
-<div class="menu section contain contain__section" id="menu">
-  <h2 class="menu__title">Menu</h2>
-  <article class="menu__course section">
-    <header class="menu__title section">
-      <h3>Appetizers</h3>
-      <p>Served Family Style</p>
-    </header>
-    <ul class="menu__course__list section">
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">Foie Gras</h4>
-        <p class="menu__course__item__desc">Seared duck liver splashed with cognac and served with toast points • 16.00
-        </p>
-        <p class="menu__course__item__price"></p>
-      </li>
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">“Ca Tim Nuong ” Fire Roasted Eggplant</h4>
-        <p class="menu__course__item__desc">Fire-roasted eggplant garnished with fresh herbs, drizzled with a sweet,
-          lightly salted and tangy Vietnamese sauce • 12.00</p>
-        <p class="menu__course__item__price"></p>
-      </li>
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">“Goi Cuon” Rice Paper Rolls</h4>
-        <p class="menu__course__item__desc">Cooked prawns, rice vermicelli, fresh mints and local grown lettuce rolled
-          in hydrated rice paper. Served with homemade three-bean sauce • 14.00</p>
-        <p class="menu__course__item__price"></p>
-      </li>
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">“Cha Gio” Crispy Việtnamese Spring Rolls</h4>
-        <p class="menu__course__item__desc">Hydrated rice paper filled with ground veal, shiitake mushrooms and white
-          jicama and lightly fried in olive oil. Served with locally grown lettuce, fresh herbs and a sweet, lightly
-          salted and tangy “nuoc mam” • 14.00</p>
-        <p class="menu__course__item__price"></p>
-      </li>
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">Crab Cakes</h4>
-        <p class="menu__course__item__desc">Lemon-scented blue crab cakes served with a smooth and creamy thermidor
-          sauce • 12.00</p>
-        <p class="menu__course__item__price"></p>
-      </li>
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">Mousse of Black Truffle Duck Paté</h4>
-        <p class="menu__course__item__desc">Served with fresh baked sourdough rolls • 8.00</p>
-        <p class="menu__course__item__price"></p>
-      </li>
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">Escargots à la Chablisienne</h4>
-        <p class="menu__course__item__desc">Classic preparation with button mushrooms and herb butter,
-          served with warm bread • 14.00</p>
-        <p class="menu__course__item__price"></p>
-      </li>
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">Beef Tartar</h4>
-        <p class="menu__course__item__desc">Hand-cut Wagyu Beef served with toast points • 18.00</p>
-        <p class="menu__course__item__price"></p>
-      </li>
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">Banana Blossom Salad</h4>
-        <p class="menu__course__item__desc">Thinly sliced banana blossom tossed with cooked prawns, Vietnamese herbs,
-          peanuts, sesame seeds, and a Lilikoi umami dressing • 18.00</p>
-        <p class="menu__course__item__price"></p>
-      </li>
-    </ul>
-  </article>
-  <article class="menu__course section">
-    <header class="menu__title section">
-      <h3>Soup and Salad</h3>
-    </header>
-    <ul class="menu__course__list section">
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">Tomato Lobster Bisque</h4>
-        <p class="menu__course__item__desc">Freshly prepared in house • 7.00</p>
-        <p class="menu__course__item__price"></p>
-      </li>
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">Butter Lettuce</h4>
-        <p class="menu__course__item__desc">Tender leaves dressed with lilikoi vinaigrette and garnished with
-          vine-ripened tomato,
-          red onion and shaved Parmesan cheese • 7.00</p>
-        <p class="menu__course__item__price"></p>
-      </li>
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">Herbs Salad</h4>
-        <p class="menu__course__item__desc">Fresh herbs, cooked prawns, dressed in our lychee vinaigrette, garnished
-          with vine-ripened tomatoes, sweet onion and shaved Parmesan cheese • 8.00</p>
-        <p class="menu__course__item__price"></p>
-      </li>
-    </ul>
-  </article>
-  <article class="menu__course section">
-    <header class="menu__title section">
-      <h3>Vegetables</h3>
-      <p>Served Family Style</p>
-    </header>
-    <ul class="menu__course__list section">
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">Asparagus with Garlic</h4>
-        <p class="menu__course__item__desc">Market fresh asparagus spears sautéed with garlic and olive oil • 10.00</p>
-        <p class="menu__course__item__price"></p>
-      </li>
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">Long Green Beans with Garlic</h4>
-        <p class="menu__course__item__desc">Market fresh long beans sautéed with garlic and olive oil • 10.00</p>
-        <p class="menu__course__item__price"></p>
-      </li>
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">“Dau Hu Xa Ot” Tofu with Lemongrass</h4>
-        <p class="menu__course__item__desc">Fried tofu sautéed and dressed with a spicy lemongrass mix • 12.00</p>
-        <p class="menu__course__item__price"></p>
-      </li>
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">“Morning Glory (Ong Choy sautéed with Garlic)</h4>
-        <p class="menu__course__item__desc">Market fresh morning glory sautéed with garlic and olive • 10.00</p>
-        <p class="menu__course__item__price"></p>
-      </li>
-    </ul>
-  </article>
-  <article class="menu__course section">
-    <header class="menu__title section">
-      <h3>Seafood</h3>
-      <p>Served Family Style</p>
-    </header>
-    <ul class="menu__course__list section">
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">“Tom Rang Muoi” Peppercorn Prawns</h4>
-        <p class="menu__course__item__desc">Large Tiger Prawns sautéed with red sea salt and roasted black peppercorns •
-          20.00</p>
-        <p class="menu__course__item__price"></p>
-      </li>
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">“Ca Chien Xoai” Pan-Fried Fish with Green Mango</h4>
-        <p class="menu__course__item__desc">Crispy fillet of Mekong River Basa atop julienned green mango dressed with a
-          mildly spiced crushed ginger sauce • 19.00</p>
-        <p class="menu__course__item__price"></p>
-      </li>
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">“Ca Kho” Việtnamese Braised Fish</h4>
-        <p class="menu__course__item__desc">Fillet of Mekong River Basa simmered with shallots, peppercorn, brown sugar
-          and
-          “nuoc mam” • 19.00</p>
-        <p class="menu__course__item__price"></p>
-      </li>
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">Fillet of Basa Nonpareil</h4>
-        <p class="menu__course__item__desc">Fillet of Mekong River Basa sautéed and dressed with a lemony caper-dill
-          beurre blanc sauce • 19.00</p>
-        <p class="menu__course__item__price"></p>
-      </li>
-    </ul>
-  </article>
-  <article class="menu__course section">
-    <header class="menu__title section">
-      <h3>Poultry</h3>
-      <p>Served Family Style</p>
-    </header>
-    <ul class="menu__course__list section">
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">“Cari Ga” Chicken Curry</h4>
-        <p class="menu__course__item__desc">Boneless Jidori chicken thigh strips simmered in a mildly spiced
-          curry cream sauce • 18.00</p>
-        <p class="menu__course__item__price"></p>
-      </li>
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">“Ga Xa Ot” Lemongrass Chicken</h4>
-        <p class="menu__course__item__desc">Boneless Jidori chicken thigh strips sautéed with mildly spiced lemongrass •
-          18.00</p>
-        <p class="menu__course__item__price"></p>
-      </li>
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">Breast of Duck Grand Marnier</h4>
-        <p class="menu__course__item__desc">Roasted duck breast, sliced and served with Grand Marnier and
-          brandied orange zest sauce • 19.00</p>
-        <p class="menu__course__item__price"></p>
-      </li>
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">Breast of Duck Saigon</h4>
-        <p class="menu__course__item__desc">Roasted duck breast, sliced and served with mildly spiced
-          crushed ginger “nuoc mam • 19.00</p>
-        <p class="menu__course__item__price"></p>
-      </li>
-    </ul>
-  </article>
-  <article class="menu__course section">
-    <header class="menu__title section">
-      <h3>Meat</h3>
-      <p>Served Family Style</p>
-    </header>
-    <ul class="menu__course__list section">
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">New Zealand Lamb Chops</h4>
-        <p class="menu__course__item__desc">Half rack of spring lamb served with red wine demi-glaze sauce • 25.00</p>
-        <p class="menu__course__item__price"></p>
-      </li>
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">Lamb Curry</h4>
-        <p class="menu__course__item__desc">Cubes of Colorado lamb tenderloin simmered in a mildly spiced curry cream
-          sauce • 25.00</p>
-        <p class="menu__course__item__price"></p>
-      </li>
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">Steak Saigon</h4>
-        <p class="menu__course__item__desc">Cubes of USDA Prime New York steak flambéed and flavored “French Shoyu” •
-          25.00</p>
-        <p class="menu__course__item__price"></p>
-      </li>
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">Steak Au Poivre</h4>
-        <p class="menu__course__item__desc">Cubed USDA Prime New York steak, flambéed with cognac and draped
-          with pink and black peppercorn sauce • 26.00</p>
-        <p class="menu__course__item__price"></p>
-      </li>
-    </ul>
-  </article>
-  <article class="menu__course section">
-    <header class="menu__title section">
-      <h3>Starches</h3>
-    </header>
-    <ul class="menu__course__list section">
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">Rice</h4>
-        <p class="menu__course__item__desc">Jasmine, Saffron Rice, or Aromatic Red Rice • 3.00</p>
-        <p class="menu__course__item__price"></p>
-      </li>
-      <li class="menu__course__item">
-        <h4 class="menu__course__item__name">Sourdough rolls</h4>
-        <p class="menu__course__item__desc">Served with virgin olive oil or butter • 3.00</p>
-        <p class="menu__course__item__price"></p>
-      </li>
-    </ul>
-  </article>
-</div>
+<div class="menu section contain contain__section" id="menu"><h2 class="menu__title">{{fields.type}}</h2><article class="menu__course section"><header class="menu__title section"><h3>Appetizers</h3><p>Served Family Style</p></header><ul class="menu__course__list section">{{#each related_items.appetizers}}<li class="menu__course__item"><h4 class="menu__course__item__name">{{fields.name}}</h4><p class="menu__course__item__desc">{{fields.description}} • {{fields.cost}}</p><p class="menu__course__item__price"></p></li>{{/each}}</ul></article><article class="menu__course section"><header class="menu__title section"><h3>Soup and Salad</h3></header><ul class="menu__course__list section">{{#each related_items.soup_and_salad}}<li class="menu__course__item"><h4 class="menu__course__item__name">{{fields.name}}</h4><p class="menu__course__item__desc">{{fields.description}} • {{fields.cost}}</p><p class="menu__course__item__price"></p></li>{{/each}}</ul></article><article class="menu__course section"><header class="menu__title section"><h3>Vegetables</h3><p>Served Family Style</p></header><ul class="menu__course__list section">{{#each related_items.vegetables}}<li class="menu__course__item"><h4 class="menu__course__item__name">{{fields.name}}</h4><p class="menu__course__item__desc">{{fields.description}} • {{fields.cost}}</p><p class="menu__course__item__price"></p></li>{{/each}}</ul></article><article class="menu__course section"><header class="menu__title section"><h3>Seafood</h3><p>Served Family Style</p></header><ul class="menu__course__list section">{{#each related_items.seafood}}<li class="menu__course__item"><h4 class="menu__course__item__name">{{fields.name}}</h4><p class="menu__course__item__desc">{{fields.description}} • {{fields.cost}}</p><p class="menu__course__item__price"></p></li>{{/each}}</ul></article><article class="menu__course section"><header class="menu__title section"><h3>Poultry</h3><p>Served Family Style</p></header><ul class="menu__course__list section">{{#each related_items.poultry}}<li class="menu__course__item"><h4 class="menu__course__item__name">{{fields.name}}</h4><p class="menu__course__item__desc">{{fields.description}} • {{fields.cost}}</p><p class="menu__course__item__price"></p></li>{{/each}}</ul></article><article class="menu__course section"><header class="menu__title section"><h3>Meat</h3><p>Served Family Style</p></header><ul class="menu__course__list section">{{#each related_items.meat}}<li class="menu__course__item"><h4 class="menu__course__item__name">{{fields.name}}</h4><p class="menu__course__item__desc">{{fields.description}} • {{fields.cost}}</p><p class="menu__course__item__price"></p></li>{{/each}}</ul></article><article class="menu__course section"><header class="menu__title section"><h3>Starches</h3></header><ul class="menu__course__list section">{{#each related_items.starches}}<li class="menu__course__item"><h4 class="menu__course__item__name">{{fields.name}}</h4><p class="menu__course__item__desc">{{fields.description}} • {{fields.cost}}</p><p class="menu__course__item__price"></p></li>{{/each}}</ul></article></div>
