--- a/src/compartments/templates/menu/show.pug
+++ b/src/compartments/templates/menu/show.pug
@@ -14,7 +14,7 @@
 
   article.menu__course.section
     header.menu__title.section
-      h3 Soup and Salad
+      h3 Salads
     ul.menu__course__list.section
       | {{#each related_items.soup_and_salad}}
       li.menu__course__item
@@ -23,21 +23,21 @@
         p.menu__course__item__price
       | {{/each}}
 
-  article.menu__course.section
-    header.menu__title.section
-      h3 Vegetables
-      p Served Family Style
-    ul.menu__course__list.section
-      | {{#each related_items.vegetables}}
-      li.menu__course__item
-        h4.menu__course__item__name {{fields.name}}
-        p.menu__course__item__desc {{fields.description}} • {{fields.cost}}
-        p.menu__course__item__price
-      | {{/each}}
+  //- article.menu__course.section
+  //-   header.menu__title.section
+  //-     h3 Vegetables
+  //-     p Served Family Style
+  //-   ul.menu__course__list.section
+  //-     | {{#each related_items.vegetables}}
+  //-     li.menu__course__item
+  //-       h4.menu__course__item__name {{fields.name}}
+  //-       p.menu__course__item__desc {{fields.description}} • {{fields.cost}}
+  //-       p.menu__course__item__price
+  //-     | {{/each}}
 
   article.menu__course.section
     header.menu__title.section
-      h3 Seafood
+      h3 Seafood & Vegetables
       p Served Family Style
     ul.menu__course__list.section
       | {{#each related_items.seafood}}
@@ -71,13 +71,13 @@
         p.menu__course__item__price
       | {{/each}}
 
-  article.menu__course.section
-    header.menu__title.section
-      h3 Starches
-    ul.menu__course__list.section
-      | {{#each related_items.starches}}
-      li.menu__course__item
-        h4.menu__course__item__name {{fields.name}}
-        p.menu__course__item__desc {{fields.description}} • {{fields.cost}}
-        p.menu__course__item__price
-      | {{/each}}
+  //- article.menu__course.section
+  //-   header.menu__title.section
+  //-     h3 Starches
+  //-   ul.menu__course__list.section
+  //-     | {{#each related_items.starches}}
+  //-     li.menu__course__item
+  //-       h4.menu__course__item__name {{fields.name}}
+  //-       p.menu__course__item__desc {{fields.description}} • {{fields.cost}}
+  //-       p.menu__course__item__price
+  //-     | {{/each}}
